--- a/css/style.css
+++ b/css/style.css
@@ -82,7 +82,7 @@ header {
   cursor: pointer;
   margin-left: 10px;
 }
-#save-input {
+#saving-input{
   width: 132px;
   height: 44px;
   margin-right: 10px;
